--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_messaging: ^15.1.2
   zego_uikit_prebuilt_call: ^4.15.13
   firebase_storage: ^12.3.2
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
